k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: task-app
spec:
  selector:
    app: task-api
  ports:
    - port: 80
      targetPort: 8080
